--- a/data/germany/energy/benzin-preis.yaml
+++ b/data/germany/energy/benzin-preis.yaml
@@ -1,4 +1,5 @@
 name: 'Benzin Preis (E5)'
+description: 'Durchschnittspreis für Superbenzin'
 sources:
   - 'https://de.statista.com/statistik/daten/studie/776/umfrage/durchschnittspreis-fuer-superbenzin-seit-dem-jahr-1972/'
 yLabel: '€/L'
