--- a/data/germany/energy/strom-preis.yaml
+++ b/data/germany/energy/strom-preis.yaml
@@ -1,4 +1,5 @@
 name: 'Strompreis'
+description: 'Durchschnittlicher Strompreis'
 sources:
   - 'https://de.wikipedia.org/wiki/Strompreis'
   - 'https://www.bdew.de/service/daten-und-grafiken/bdew-strompreisanalyse/'
