--- a/data/germany/energy/windkraft-leistung-genehmigung.yaml
+++ b/data/germany/energy/windkraft-leistung-genehmigung.yaml
@@ -1,4 +1,5 @@
 name: 'Windkraft-Leistung Genehmigung'
+description: 'Genehmigte Windkraftleistung in Gigawatt'
 sources:
   - 'https://www.fachagentur-windenergie.de/veroeffentlichungen/publikationen/'
   - 'https://www.fachagentur-windenergie.de/aktuelles/detail/rekord-jahr-bei-den-windenergie-genehmigungen/'
