--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run: echo "version=v$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
 
       - name: Build
-        run: flutter build web --base-href="/${{ env.version }}/"
+        run: flutter build web --wasm --base-href="/${{ env.version }}/"
 
       - name: Create version directory
         run: mkdir -p build/web/${{ env.version }}
